Fixed spacing of navbar

--- a/pokemon-demo-app/src/app/components/navbar/navbar.component.scss
+++ b/pokemon-demo-app/src/app/components/navbar/navbar.component.scss
@@ -61,7 +61,7 @@
             display: flex;
             font-size: 1.25em;
             font-weight: 700;
-            padding-right: $default-spacing;            
+            padding-left: $default-spacing;
         }
     }
 
